# openbook-v2-simulation

./: Cargo.toml  README.md  package.json
configure/: anchor_utils.ts  config.json  config_small.json  configure_openbook_v2.ts  deploy-programs.sh  output_file.ts
configure/general/: mint_utils.ts
configure/openbook-v2/: configure_openbook.ts  create_markets.ts  openbook_v2.ts
configure/programs/: openbook_v2.json
src/: cli.rs  confirmation_strategy.rs  crank.rs  helpers.rs  json_config.rs  main.rs  market_maker.rs  openbook_config.rs  openbook_v2_sink.rs  states.rs  stats.rs  tpu_manager.rs
