[package]
name = "openbook-v2-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openbook-v2 = {git = "https://github.com/openbook-dex/openbook-v2", features=["enable-gpl"]}
anchor-client = "0.27.0"
anchor-lang = "0.27.0"
anchor-spl = "0.27.0"
pyth-sdk-solana = "0.1.0"
solana-account-decoder = "~1.14.17"
solana-client = "~1.14.17"
solana-logger = "~1.14.17"
solana-program = "~1.14.17"
solana-program-test = "~1.14.17"
solana-rpc = "~1.14.17"
solana-sdk = "~1.14.17"
spl-token-2022 = "=0.6.0"
tokio = { version = "1.14.1", features = ["full"] }
bincode = "1.3.3"
"yellowstone-grpc-proto" = "=1.1.0"

